# ToTRM

./: .gitignore  CLAUDE.md  README.md  TOTRM_README.md  analyze_totrm_branches.py  evaluate.py  prepare_arc_dataset.sh  prepare_sudoku_4x4_dataset.sh  prepare_sudoku_extreme_small_eval.sh  prepare_xor_dataset.sh  pretrain.py  pyproject.toml  test_initialization.py  test_totrm.py  test_transfer_quick.sh  train_arc.sh  train_rubik2x2.sh  train_sudoku4x4.sh  train_totrm_arc2.sh  train_totrm_sudoku4x4.sh  train_totrm_sudoku_extreme.sh  train_totrm_sudoku_extreme_from_checkpoint.sh  train_totrm_sudoku_extreme_small_eval.sh  train_totrm_sudoku_extreme_with_FiLM.sh  train_totrm_sudoku_extreme_with_FiLM_from_checkpoint.sh  train_totrm_sudoku_extreme_with_hieatt.sh  train_totrm_transfer_from_trm.sh  train_trm_sudoku_extreme.sh  train_xor.sh
claude_code_testcode/: HIERARCHICAL_ATTENTION.md  analyze_totrm_branches.py  count_params_simple.py  inspect_sudoku_data.py  test_broadcasting.py  test_full_forward.py  test_gradient_flow.py  test_hierarchical_attention.py  test_learning_detailed.py  test_learning_simulation.py  test_shapes.py
config/: cfg_pretrain.yaml
config/arch/: totrm.yaml
dataset/: build_rubik2x2_dataset.py  build_sudoku_4x4_dataset.py  build_sudoku_dataset_small_eval.py  build_xor_dataset.py
models/: layers.py  losses.py
models/recursive_reasoning/: totrm.py  totrm_no_noise.py
shared_checkpoints/TRM_3602/TRM_3602/: TRM_baseline.sh  all_config.yaml  trm.py  (+1 more)
shared_checkpoints/totrm_251122/: all_config.yaml  totrm.py
utils/: checkpoint_utils.py
